--- a/admin.html
+++ b/admin.html
@@ -512,6 +512,28 @@
                         <button onclick="grantCosmetic('titleEffect','halo')">⭐ Halo Title Effect</button>
                     </div>
 
+                    <h3 style="margin-top:20px;">🔥 LEGENDARY Tier</h3>
+                    <p style="opacity:0.85;color:#fbbf24;">Ultra-rare legendary cosmetics!</p>
+                    <div style="display:flex;flex-wrap:wrap;gap:8px;margin-top:8px;">
+                        <button onclick="grantCosmetic('avatarBorder','dragon-fire')" style="background:linear-gradient(135deg,#fbbf24,#f59e0b);">🔥 Dragon Fire Border</button>
+                        <button onclick="grantCosmetic('nameStyle','diamond-shine')" style="background:linear-gradient(135deg,#fbbf24,#f59e0b);">💎 Diamond Shine Name</button>
+                        <button onclick="grantCosmetic('animatedNameEffect','phoenix-blaze')" style="background:linear-gradient(135deg,#fbbf24,#f59e0b);">🔥 Phoenix Blaze</button>
+                        <button onclick="grantCosmetic('animatedBorder','lightning-strike')" style="background:linear-gradient(135deg,#fbbf24,#f59e0b);">⚡ Lightning Strike</button>
+                        <button onclick="grantCosmetic('titleEffect','emperor-crown')" style="background:linear-gradient(135deg,#fbbf24,#f59e0b);">👑✨ Emperor Crown</button>
+                        <button onclick="grantCosmetic('chatBubbleColor','#fbbf24')" style="background:linear-gradient(135deg,#fbbf24,#f59e0b);">🟡 Legendary Gold Chat</button>
+                    </div>
+
+                    <h3 style="margin-top:20px;">⚡ ETERNAL Tier</h3>
+                    <p style="opacity:0.85;color:#a78bfa;">Mythical eternal cosmetics with divine power!</p>
+                    <div style="display:flex;flex-wrap:wrap;gap:8px;margin-top:8px;">
+                        <button onclick="grantCosmetic('avatarBorder','celestial-aura')" style="background:linear-gradient(135deg,#a78bfa,#8b5cf6);box-shadow:0 0 15px rgba(167,139,250,0.5);">⭐ Celestial Aura</button>
+                        <button onclick="grantCosmetic('nameStyle','cosmic-energy')" style="background:linear-gradient(135deg,#a78bfa,#8b5cf6);box-shadow:0 0 15px rgba(167,139,250,0.5);">🌌 Cosmic Energy</button>
+                        <button onclick="grantCosmetic('animatedNameEffect','void-pulse')" style="background:linear-gradient(135deg,#a78bfa,#8b5cf6);box-shadow:0 0 15px rgba(167,139,250,0.5);">🌀 Void Pulse</button>
+                        <button onclick="grantCosmetic('animatedBorder','quantum-field')" style="background:linear-gradient(135deg,#a78bfa,#8b5cf6);box-shadow:0 0 15px rgba(167,139,250,0.5);">⚛️ Quantum Field</button>
+                        <button onclick="grantCosmetic('titleEffect','god-mode')" style="background:linear-gradient(135deg,#a78bfa,#8b5cf6);box-shadow:0 0 15px rgba(167,139,250,0.5);">☀️ God Mode</button>
+                        <button onclick="grantCosmetic('chatBubbleColor','#a78bfa')" style="background:linear-gradient(135deg,#a78bfa,#8b5cf6);box-shadow:0 0 15px rgba(167,139,250,0.5);">🟣 Eternal Purple Chat</button>
+                    </div>
+
                     <h3 style="margin-top:20px;">🎖️ Verified Badge</h3>
                     <p style="opacity:0.85">Mark student as verified with a prestigious badge on their profile.</p>
                     <div style="display:flex;flex-wrap:wrap;gap:8px;margin-top:8px;">
