--- a/settings.html
+++ b/settings.html
@@ -332,7 +332,7 @@
     if (type === 'animatedNameEffects') return cos.animatedNameEffect || null;
     if (type === 'animatedBorders') return cos.animatedBorder || null;
     if (type === 'titleEffects') return cos.titleEffect || null;
-    if (type === 'chatColors') return cos.chatColor || null;
+    if (type === 'chatColors') return cos.chatColor || cos.chatBubbleColor || null;
     if (type === 'backgrounds') return cos.backgroundUrl || null;
     return null;
   }
@@ -344,7 +344,7 @@
     else if (type === 'animatedNameEffects') body.cosmetics.animatedNameEffect = value;
     else if (type === 'animatedBorders') body.cosmetics.animatedBorder = value;
     else if (type === 'titleEffects') body.cosmetics.titleEffect = value;
-    else if (type === 'chatColors') body.cosmetics.chatColor = value;
+    else if (type === 'chatColors') { body.cosmetics.chatColor = value; body.cosmetics.chatBubbleColor = value; }
     else if (type === 'backgrounds') body.cosmetics.backgroundUrl = value;
 
     try {
@@ -522,7 +522,8 @@
       if (!res.ok) {
         const errorText = await res.text();
         console.error('Load settings failed:', res.status, res.statusText, errorText);
-        document.body.innerHTML = `<div style="color:white;padding:20px;text-align:center;font-family:Poppins,sans-serif;background:linear-gradient(135deg, #0077ff, #00d4ff);min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;"><h2>Error Loading Settings</h2><p>Status: ${res.status} ${res.statusText}</p><p>${errorText || 'Unknown error'}</p><button onclick="location.reload()" style="padding:10px 20px;margin-top:10px;cursor:pointer;background:#005eff;color:white;border:none;border-radius:8px;font-weight:600;">Retry</button></div>`;
+        if (refreshStatus) refreshStatus.value = `Error: ${res.status}`;
+        if (saveMsg) { saveMsg.style.color = 'salmon'; saveMsg.textContent = errorText || 'Failed to load settings'; }
         return;
       }
       const data = await res.json();
@@ -530,7 +531,7 @@
       
       if (!data || !data.settings) {
         console.error('Invalid response data - no settings object');
-        document.body.innerHTML = `<div style="color:white;padding:20px;text-align:center;font-family:Poppins,sans-serif;background:linear-gradient(135deg, #0077ff, #00d4ff);min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;"><h2>Settings Not Found</h2><p>Your profile doesn't have settings configured.</p><button onclick="location.href='student.html'" style="padding:10px 20px;margin-top:10px;cursor:pointer;background:#005eff;color:white;border:none;border-radius:8px;font-weight:600;">Go to Dashboard</button></div>`;
+        if (saveMsg) { saveMsg.style.color = 'salmon'; saveMsg.textContent = 'Settings not found'; }
         return;
       }
 
@@ -542,10 +543,11 @@
       safeMode.checked = !!data.settings.safeMode;
 
       renderInventory();
+      if (refreshStatus) refreshStatus.value = 'Ready';
       console.log('Settings loaded successfully');
     } catch (err) {
       console.error('Settings load error:', err);
-      document.body.innerHTML = `<div style="color:white;padding:20px;text-align:center;font-family:Poppins,sans-serif;background:linear-gradient(135deg, #0077ff, #00d4ff);min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;"><h2>Error: ${err.message}</h2><button onclick="location.reload()" style="padding:10px 20px;margin-top:10px;cursor:pointer;background:#005eff;color:white;border:none;border-radius:8px;font-weight:600;">Retry</button></div>`;
+      if (saveMsg) { saveMsg.style.color = 'salmon'; saveMsg.textContent = err.message; }
     }
   }
 
